# zawadi-systems

./: .env.example  App.tsx  README.md  constants.ts  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts
backend/: .env  .env.example  alembic.ini  database.py  main.py  pyproject.toml  requirements.txt  zawadi.db
backend/alembic/: env.py
backend/alembic/versions/: 8221aae0048b_add_user_model.py  ab769d368171_initial_base_model.py  fdf190c4c242_add_product_sale_saleitem_models.py
backend/api/: deps.py
backend/api/v1/: __init__.py  auth.py
backend/auth/: dependencies.py  security.py
backend/core/: config.py  security.py
backend/models/: __init__.py  base.py  inventory_log.py  product.py  sale.py  sale_item.py  user.py
backend/routes/: __init__.py  auth.py  dashboard.py  products.py  sales.py  users.py
backend/schemas/: __init__.py  auth.py  common.py  dashboard.py  inventory.py  product.py  sale.py  user.py
backend/services/: dashboard_service.py  product_service.py  sale_service.py  user_service.py
backend/utils/: serializers.py
components/: Dashboard.tsx  Inventory.tsx  Layout.tsx  POS.tsx  Reports.tsx
src/: App.tsx  types.ts
src/components/: Dashboard.tsx  Inventory.tsx  Layout.tsx  LoginPage.tsx  POS.tsx  SalesHistory.tsx  UsersPanel.tsx
src/hooks/: useLocalStorage.ts
src/lib/: format.ts
src/services/: api.ts
src/styles/: index.css
