[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zawadi-backend"
version = "0.1.0"
description = "Zawadi Sales Management Backend"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.32.0",
  "sqlalchemy==2.0.36",
  "alembic==1.16.2",
  "psycopg2-binary==2.9.10",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-multipart==0.0.12"
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "mypy",
  "pytest",
  "httpx"
]

